# HD6301_thing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
asm/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  blink.s  blink_parametrized.s  depgen.py  ftscreen.sh  generate_programs_list.py  graphic_terminal_test.s  irq_test.s  keyboard_keymap_us.inc  macros.inc  monitor.s  programs.s  ps2_decoder.inc  ps2_keyboard.s  registers.inc  sci_echo.s  sci_hello.s  stdlib.inc
asm/include/: color_constants.inc  debug_macros.inc  delays.inc  file.inc  general_midi_instruments.inc  graphics.inc  i2c.inc  instruments.inc  io.inc  key_constants.inc  keyboard.inc  keyboard_6301.inc  keyboard_keymap_us.inc  macros.inc  map.inc  memory_map.inc  midi.inc  midi_uart.inc  ps2_decoder.inc  random.inc  registers.inc  sd_card.inc  serial.inc  sound.inc  sound_frequency_tables.inc  spi.inc  spi_bitbang.inc  stdio.inc  timer.inc
asm/programs/: edi.s  edi_ui.txt  graphics_test.s  hello.s  i2c_test.s  io_test.s  keyboard_test.s  midi_decode.s  midi_synth.s  opl3_test.s  random.s  sci_echo.s  sdbench.s  seq.s  seq_logo.txt  serial_opl3.s  snake.s  test.s  volume_test.s  w65c22_timer.s
board/: .gitignore  HD6301V1_thing.kicad_dru  HD6301V1_thing.kicad_pcb  HD6301V1_thing.kicad_pro  HD6301V1_thing.kicad_sch
board_template/: .gitignore  board_template.kicad_pcb  board_template.kicad_pro  board_template.kicad_sch
board_template/meta/: info.html
cpld/: ft231_decoder.gp6  ft231_decoder.txt  greenpak_programmer.py
dependencies/: CMakeLists.txt  README.md
disassembler/: CMakeLists.txt  disassembler.cc  disassembler.h  disassembler_test.cc  instructions6301.h  main.cc
disassembler/testdata/: bitops.s  jmp_across_data.s  simple_bra_loop.s
documentation/: 6301_instruction_set.md
emulator/: CMakeLists.txt  LICENSE  README.md  address_space.cc  address_space.h  cpu6301.cc  cpu6301.h  cpu6301_test.cc  emulator.cc  graphics.cc  graphics.h  graphics_tester.cc  hd6301_serial.cc  hd6301_serial.h  hd6301_thing.cc  hd6301_thing.h  hexdump.cc  hexdump.h  hexdump_test.cc  interrupt.h  ioport.cc  ioport.h  midi_to_serial.cc  midi_to_serial.h  ps2_keyboard.cc  ps2_keyboard.h  ps2_keyboard_6301.cc  ps2_keyboard_6301.h  ram.cc  ram.h  rom.cc  rom.h  sd_card_spi.cc  sd_card_spi.h  sdl_to_ps2_keymap.h  sound_opl3.cc  sound_opl3.h  spi.cc  spi.h  spi_test.cc  (+12 more)
ft231x_programmer/: cbus_pin_config.sh  programmer.py
graphics_state/: CMakeLists.txt  README.md  graphics_state.cc  graphics_state.h  graphics_state_test.cc
greenpak/: greenpak_programmer.py  memory_map.gp6  memory_map.txt  memory_map_tssop.gp6  memory_map_tssop.txt  midi_control.gp6  midi_control.txt  midi_memory_map.gp6  midi_memory_map.txt  opl3_sound_tssop.gp6  opl3_sound_tssop.txt  pico_graphics.gp6  pico_graphics.txt  pico_graphics_tssop.gp6  pico_graphics_tssop.txt  pico_programmer.gp6  pico_programmer.txt  pico_programmer_tssop.gp6  pico_programmer_tssop.txt  ps2_decoder.gp6  ps2_decoder.txt  ps2_pulls_only.gp6  ps2_pulls_only.txt
internal_rom/: Makefile  README.md  dumped_internal_rom.info  dumped_internal_rom_disassembly.s  serial_romdump.py  serial_romdump.s
io_board/: CMakeLists.txt  io_address_decoding.gp6  io_address_decoding.txt  io_ps2.gp6  io_ps2.txt  io_spi_delay.gp6  io_spi_delay.txt
io_board/hardware/: .gitignore  io_board.kicad_pcb  io_board.kicad_pro  io_board.kicad_sch
midi/: midi_stats.py
midi/hardware/: .gitignore  midi_board.kicad_pcb  midi_board.kicad_pro  midi_board.kicad_sch
opl3_sound/: .gitignore  README.md  opl3.py
opl3_sound/hardware/: .gitignore  opl3_sound.kicad_pcb  opl3_sound.kicad_pro  opl3_sound.kicad_sch
pico_graphics/: CMakeLists.txt  README.md  font.h  font8x8.h  fontgen.py  pico_graphics.cpp  pico_graphics_gpio_tester.cpp  tmds_encode_font_2bpp.h
pico_graphics/hardware/: .gitignore  pico_graphics_board.kicad_pcb  pico_graphics_board.kicad_pro  pico_graphics_board.kicad_sch
pico_programmer/: CMakeLists.txt  pico_programmer.cpp  programmer.py
programmer/: programmer.py
programmer_board/: .gitignore  README.md  programmer_board.kicad_pcb  programmer_board.kicad_pro  programmer_board.kicad_sch
tools/: fat16_info.py  make_fat16_sd_image.sh  midi_file_decoding.py  midi_tempo_stats.py  tmb_to_asm.py
